# vault-barinex

./: .gitignore  .pre-commit-config.yaml  README.md  clear_logs.bat  fetch_all.py  fetch_binance_ohlcv.py  folder_hierarchy.txt  mapper.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat
.github/workflows/: ci.yml
config/: indicator_settings.yml  settings.py
db/: create_ohlcv_tables.py  operations.py  schema.py
docs/: README_ohlcv_fetcher.md  first_data_finder.md  indicator_evaluator_doc.md  structure.md
docs/backlist/: Proposed Project Restructure for barinex.md  Stepwise Roadmap to Full Standards Compliance.md
env-barinex/: pyvenv.cfg
env-barinex/Scripts/: activate  activate.bat
fetcher/: binance.py  last_fetch.json  ohlcv_data_fetcher.py
indicators/: adx.py  macd.py  rsi.py
logic/: indicator_evaluator.py  ohlcv_handler.py
logs/: batch_fetch.log.txt
scripts/: evaluate_indicators_at.py  find_first_data.py  first_data_finder.py
setup/: pre commit config
src/barinex/: exceptions.py
src/barinex/config/: settings.py  symbols.yml
src/barinex/db/: operations.py  schema.py
src/barinex/fetcher/: binance.py  last_fetch.json  ohlcv_data_fetcher.py
src/barinex/indicators/: adx.py  macd.py  rsi.py
src/barinex/services/: evaluator.py  indicator_evaluator.py  ohlcv_handler.py
src/barinex/utils/: resample.py
test_scripts/: checker.py  find_first_available_btc_data.py
