[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    env-barinex
  | env
  | venv
  | \.venv
  | build
  | dist
)/

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.mypy]
python_version = 3.8
strict = true

[project]               # or [tool.poetry] if you’re using Poetry
name        = "barinex"
version     = "0.1.0"
description = "A CLI tool and library for crypto OHLCV fetching and indicator computation"
authors     = ["Arash <you@example.com>"]
license     = { file = "LICENSE.md" }
readme      = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
