[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = '''
/(
    env-barinex
  | venv
  | \.venv
  | build
  | dist
  | scripts
  | fetcher
  | db
  | indicators
  | logic
  | test_scripts
  | folder_hierarchy\.txt
  | mapper\.ini
  | \.github
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [
  "env-barinex",
  "venv",
  ".venv",
  "build",
  "dist",
  "scripts",
  "fetcher",
  "db",
  "indicators",
  "logic",
  "test_scripts",
  "folder_hierarchy.txt",
  "mapper.ini",
  ".github"
]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
exclude = '^(scripts|fetcher|db|indicators|logic|test_scripts)/'
